--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.chess/ru.vsu.korotkov.chess.userInteractions.UI.HelloApplication</mainClass>
+                            <mainClass>com.example.chess/ru.vsu.korotkov.chess.userInteractions.UI.ChessApp</mainClass>
                         </configuration>
                     </execution>
                 </executions>
